--- a/portal/service_provider/src/index.html
+++ b/portal/service_provider/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/ohzas.png">
-  <title>Ohzas Service Provider Portal</title>
+  <title>Doc Booking Admin Portal</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
